[gd_scene load_steps=3 format=3 uid="uid://ckrp1lufqdkcv"]

[ext_resource type="Script" uid="uid://bkkhlt0bs1bps" path="res://Scripts/Interactables/area_trigger.gd" id="1_e377t"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6byaq"]
radius = 125.39936

[node name="AreaTrigger" type="Area2D"]
collision_layer = 0
collision_mask = 4
script = ExtResource("1_e377t")
debug = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_6byaq")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Interact"

[connection signal="body_entered" from="." to="." method="on_enter"]
[connection signal="body_exited" from="." to="." method="on_exit"]
